Superrefactorización y A estrella